--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "06-ignite-call",
   "version": "1.0.0",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
